--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 #+TITLE:   Paper Mode
 
-Experimental PDF viewer for Emacs, using gtk directly on an Emacs window from a
-dynamic module - the method invented by [[https://github.com/akirakyle/emacs-webkit][emcas-webkit]].
+Experimental PDF viewer for Emacs, rendering with mupdf and using gtk directly
+on an Emacs window from a dynamic module - the method invented by [[https://github.com/akirakyle/emacs-webkit][emcas-webkit]].
 
 Currently I'm developing the viewer as a separate executable that opens a gtk
 window. Once I have mouse controls and things stabilize I'll embed it into Emacs.
