--- a/README.org
+++ b/README.org
@@ -6,20 +6,30 @@ on an Emacs window from a dynamic module - the method invented by [[https://gith
 Currently I'm developing the viewer as a separate executable that opens a gtk
 window. Once I have mouse controls and things stabilize I'll embed it into Emacs.
 
-* TODO list
-- [X] Ensure zoom & rotation work
-- [X] Scroll
-- [ ] Center pages
-- [ ] Show more than one page at a time
-- [ ] Links:
-  + [ ] ace link selection
-- [ ] Mouse:
-  + [ ] Smooth scrolling like Evince has
-  + [ ] Select text
-  + [ ] Links:
-    - [ ] Highlight on hover
-    - [ ] Show destination in a mousce hover popup kinda thing
-    - [ ] Follow on click
-- [ ] Search
-- [ ] Lazy load page text
-- [ ] Pre render next pages and free previous pages
+* Todo list
+- [-] Outside Emacs
+  + [X] Ensure zoom & rotation work
+  + [X] Scroll
+  + [ ] Sensible page dimensions by default:
+    Center with a fixed width if the window is too long, fit to width if
+    sensible, calculate minimum width with ~fz_new_bbox_device~ if too small.
+  + [ ] Show more than one page at a time
+  + [ ] Mouse:
+    - [ ] Smooth scrolling like Evince has
+    - [ ] Select text
+    - [ ] Links:
+      + [ ] Highlight on hover
+      + [ ] Show destination in a mousce hover popup kinda thing
+      + [ ] Follow on click
+  + [ ] Lazy load page text
+  + [ ] Pre render next pages and free previous pages
+- [ ] Inside Emacs
+  + [ ] Evil controls. I can't do Emacs-style keybinds myself.
+  + [ ] Search
+    - [ ] Normal
+    - [ ] With a swiper-like preview of the results
+  + [ ] Change bg & fg colors to comply with the Emacs theme, pdf-midnight-mode
+  + [ ] Opening PDFs with passwords
+  + [ ] Ace link selection
+  + [ ] pdftotext view
+  + [ ] extract/open embedded files
