--- a/README.org
+++ b/README.org
@@ -14,15 +14,16 @@ window. Once I have mouse controls and things stabilize I'll embed it into Emacs
     Center with a fixed width if the window is too long, fit to width if
     sensible, calculate minimum width with ~fz_new_bbox_device~ if too small.
   + [-] Show more than one page at a time
-  + [ ] Mouse:
+  + [-] Mouse:
     - [ ] Smooth scrolling like Evince has
-    - [ ] Select text
+    - [-] Select text
     - [ ] Links:
       + [ ] Highlight on hover
       + [ ] Show destination in a mousce hover popup kinda thing
       + [ ] Follow on click
   + [ ] Lazy load page text
   + [ ] Pre render next pages and free previous pages
+  + [ ] Synctex
 - [ ] Inside Emacs
   + [ ] Evil controls. I can't do Emacs-style keybinds myself.
   + [ ] Search
