--- a/README.org
+++ b/README.org
@@ -13,10 +13,10 @@ window. Once I have mouse controls and things stabilize I'll embed it into Emacs
   + [ ] Sensible page dimensions by default:
     Center with a fixed width if the window is too long, fit to width if
     sensible, calculate minimum width with ~fz_new_bbox_device~ if too small.
-  + [-] Show more than one page at a time
+  + [X] Show more than one page at a time
   + [-] Mouse:
     - [ ] Smooth scrolling like Evince has
-    - [-] Select text
+    - [X] Select text over multiple pages
     - [ ] Links:
       + [ ] Highlight on hover
       + [ ] Show destination in a mousce hover popup kinda thing
@@ -35,3 +35,4 @@ window. Once I have mouse controls and things stabilize I'll embed it into Emacs
   + [ ] Ace link selection
   + [ ] pdftotext view
   + [ ] extract/open embedded files
+  + [ ] Annotations with text editing through Emacs
